[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/settings_menu_script.gd" type="Script" id=2]
[ext_resource path="res://assets/font/dynamicMedium.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/font/SetingsNumber.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1088.0
color = Color( 0.466667, 0.490196, 0.976471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.133
anchor_top = 0.267
anchor_right = 0.862
anchor_bottom = 0.904
margin_left = -15.36
margin_top = -80.36
margin_right = -7.04004
margin_bottom = -72.32
custom_constants/separation = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 1408.0
margin_bottom = 213.0
custom_fonts/font = ExtResource( 3 )
text = "SETTINGS
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="Label" parent="VBoxContainer"]
margin_top = 215.0
margin_right = 1408.0
margin_bottom = 327.0
custom_fonts/font = SubResource( 1 )
text = "VOLUME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/Volume"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -507.0
margin_top = -42.0
margin_right = -307.0
margin_bottom = 42.0
min_value = 1.0
value = 100.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="VBoxContainer/Volume"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -255.74
margin_top = -42.0
margin_right = -55.74
margin_bottom = 42.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fov" type="Label" parent="VBoxContainer"]
margin_top = 329.0
margin_right = 1408.0
margin_bottom = 441.0
custom_fonts/font = SubResource( 1 )
text = "FOV"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FovSlider" type="HSlider" parent="VBoxContainer/Fov"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -507.0
margin_top = -42.0
margin_right = -307.0
margin_bottom = 42.0
min_value = 10.0
value = 10.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="VBoxContainer/Fov"]
margin_left = 1150.0
margin_right = 1350.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sensibility" type="Label" parent="VBoxContainer"]
margin_top = 443.0
margin_right = 1408.0
margin_bottom = 555.0
custom_fonts/font = SubResource( 1 )
text = "SENSIBILITY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SensSlider" type="HSlider" parent="VBoxContainer/Sensibility"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -507.0
margin_top = -42.0
margin_right = -307.0
margin_bottom = 42.0
min_value = 0.01
max_value = 1.0
step = 0.01
value = 1.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="VBoxContainer/Sensibility"]
margin_left = 1150.0
margin_right = 1350.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Label" parent="VBoxContainer"]
margin_top = 557.0
margin_right = 1408.0
margin_bottom = 669.0
custom_fonts/font = SubResource( 1 )
text = "BACK"
align = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="back_button" type="Button" parent="VBoxContainer/back"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.449
anchor_top = 0.262
anchor_right = 0.545
anchor_bottom = 0.929
margin_left = -0.192017
margin_top = -0.00800133
margin_right = 0.639954
margin_bottom = -0.0360031
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="VBoxContainer/Volume/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Fov/FovSlider" to="." method="_on_FovSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Sensibility/SensSlider" to="." method="_on_SensSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/back/back_button" to="." method="_on_back_button_pressed"]
